--- a/config
+++ b/config
@@ -2016,7 +2016,7 @@ CONFIG_DM_BUFIO=m
 CONFIG_DM_BIO_PRISON=m
 CONFIG_DM_PERSISTENT_DATA=m
 CONFIG_DM_UNSTRIPED=m
-CONFIG_DM_CRYPT=m
+CONFIG_DM_CRYPT=y
 CONFIG_DM_SNAPSHOT=m
 CONFIG_DM_THIN_PROVISIONING=m
 # CONFIG_DM_CACHE is not set
@@ -4278,7 +4278,7 @@ CONFIG_KEYS=y
 # CONFIG_KEYS_REQUEST_CACHE is not set
 # CONFIG_PERSISTENT_KEYRINGS is not set
 CONFIG_TRUSTED_KEYS=m
-CONFIG_ENCRYPTED_KEYS=m
+CONFIG_ENCRYPTED_KEYS=y
 # CONFIG_KEY_DH_OPERATIONS is not set
 CONFIG_SECURITY_DMESG_RESTRICT=y
 # CONFIG_SECURITY is not set
@@ -4395,7 +4395,7 @@ CONFIG_CRYPTO_NHPOLY1305=m
 # CONFIG_CRYPTO_NHPOLY1305_SSE2 is not set
 CONFIG_CRYPTO_NHPOLY1305_AVX2=m
 CONFIG_CRYPTO_ADIANTUM=m
-CONFIG_CRYPTO_ESSIV=m
+CONFIG_CRYPTO_ESSIV=y
 
 #
 # Hash modes
