--- a/config
+++ b/config
@@ -1,8 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.12.10 Kernel Configuration
+# Linux/x86 5.12.11 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (Clear Linux OS for Intel Architecture) 11.1.1 20210529 releases/gcc-11.1.0-189-g6c84cc4389"
+CONFIG_CC_VERSION_TEXT="gcc (Clear Linux OS for Intel Architecture) 11.1.1 20210614 releases/gcc-11.1.0-278-g3ae416e0a7"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=110101
 CONFIG_CLANG_VERSION=0
@@ -1755,6 +1755,7 @@ CONFIG_BLK_DEV_RBD=m
 #
 # CONFIG_BLK_DEV_NVME is not set
 # CONFIG_NVME_FC is not set
+# CONFIG_NVME_TCP is not set
 # CONFIG_NVME_TARGET is not set
 # end of NVME Support
 
