--- a/config
+++ b/config
@@ -1,8 +1,8 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.12.14 Kernel Configuration
+# Linux/x86 5.12.15 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (Clear Linux OS for Intel Architecture) 11.1.1 20210623 releases/gcc-11.1.0-352-gea2f428bfe"
+CONFIG_CC_VERSION_TEXT="gcc (Clear Linux OS for Intel Architecture) 11.1.1 20210630 releases/gcc-11.1.0-371-g7f954b851a"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=110101
 CONFIG_CLANG_VERSION=0
