fix some kernel modules

--- a/config
+++ b/config
@@ -1748,6 +1748,7 @@ CONFIG_CDROM=m
 CONFIG_ZRAM=m
 # CONFIG_ZRAM_DEF_COMP_LZORLE is not set
 CONFIG_ZRAM_DEF_COMP_ZSTD=y
+# CONFIG_ZRAM_DEF_COMP_LZ4 is not set
 # CONFIG_ZRAM_DEF_COMP_LZO is not set
 CONFIG_ZRAM_DEF_COMP="zstd"
 CONFIG_ZRAM_WRITEBACK=y
@@ -2129,8 +2130,8 @@ CONFIG_TAP=y
 # CONFIG_TUN_VNET_CROSS_LE is not set
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=m
-# CONFIG_NLMON is not set
-# CONFIG_VSOCKMON is not set
+CONFIG_NLMON=m
+CONFIG_VSOCKMON=m
 # CONFIG_ARCNET is not set
 
 #
@@ -2237,7 +2238,7 @@ CONFIG_IXGBEVF=m
 CONFIG_I40E=m
 CONFIG_IAVF=m
 CONFIG_I40EVF=m
-# CONFIG_ICE is not set
+CONFIG_ICE=m
 CONFIG_FM10K=m
 CONFIG_IGC=m
 # CONFIG_NET_VENDOR_MICROSOFT is not set
@@ -2251,11 +2252,11 @@ CONFIG_SKY2=m
 # CONFIG_SKY2_DEBUG is not set
 # CONFIG_PRESTERA is not set
 CONFIG_NET_VENDOR_MELLANOX=y
-CONFIG_MLX4_EN=y
-CONFIG_MLX4_CORE=y
+CONFIG_MLX4_EN=m
+CONFIG_MLX4_CORE=m
 # CONFIG_MLX4_DEBUG is not set
 CONFIG_MLX4_CORE_GEN2=y
-CONFIG_MLX5_CORE=y
+CONFIG_MLX5_CORE=m
 CONFIG_MLX5_ACCEL=y
 CONFIG_MLX5_FPGA=y
 CONFIG_MLX5_CORE_EN=y
@@ -2267,10 +2268,11 @@ CONFIG_MLX5_CLS_ACT=y
 CONFIG_MLX5_TC_SAMPLE=y
 CONFIG_MLX5_CORE_IPOIB=y
 CONFIG_MLX5_FPGA_IPSEC=y
-# CONFIG_MLX5_IPSEC is not set
+CONFIG_MLX5_IPSEC=y
 CONFIG_MLX5_EN_IPSEC=y
 CONFIG_MLX5_SW_STEERING=y
-# CONFIG_MLX5_SF is not set
+CONFIG_MLX5_SF=y
+CONFIG_MLX5_SF_MANAGER=y
 CONFIG_MLXSW_CORE=m
 CONFIG_MLXSW_CORE_HWMON=y
 CONFIG_MLXSW_CORE_THERMAL=y
@@ -4578,7 +4580,7 @@ CONFIG_CRYPTO_ECDH=m
 CONFIG_CRYPTO_ECDSA=m
 # CONFIG_CRYPTO_ECRDSA is not set
 # CONFIG_CRYPTO_SM2 is not set
-# CONFIG_CRYPTO_CURVE25519 is not set
+CONFIG_CRYPTO_CURVE25519=m
 CONFIG_CRYPTO_CURVE25519_X86=m
 
 #
@@ -4588,7 +4590,7 @@ CONFIG_CRYPTO_CCM=y
 CONFIG_CRYPTO_GCM=m
 # CONFIG_CRYPTO_CHACHA20POLY1305 is not set
 # CONFIG_CRYPTO_AEGIS128 is not set
-# CONFIG_CRYPTO_AEGIS128_AESNI_SSE2 is not set
+CONFIG_CRYPTO_AEGIS128_AESNI_SSE2=m
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_ECHAINIV=y
 
@@ -4686,9 +4688,9 @@ CONFIG_CRYPTO_SERPENT_AVX2_X86_64=m
 CONFIG_CRYPTO_TEA=m
 CONFIG_CRYPTO_TWOFISH=m
 CONFIG_CRYPTO_TWOFISH_COMMON=m
-# CONFIG_CRYPTO_TWOFISH_X86_64 is not set
-# CONFIG_CRYPTO_TWOFISH_X86_64_3WAY is not set
-# CONFIG_CRYPTO_TWOFISH_AVX_X86_64 is not set
+CONFIG_CRYPTO_TWOFISH_X86_64=m
+CONFIG_CRYPTO_TWOFISH_X86_64_3WAY=m
+CONFIG_CRYPTO_TWOFISH_AVX_X86_64=m
 
 #
 # Compression
@@ -4696,14 +4698,14 @@ CONFIG_CRYPTO_TWOFISH_COMMON=m
 CONFIG_CRYPTO_DEFLATE=y
 CONFIG_CRYPTO_LZO=m
 # CONFIG_CRYPTO_842 is not set
-# CONFIG_CRYPTO_LZ4 is not set
+CONFIG_CRYPTO_LZ4=m
 # CONFIG_CRYPTO_LZ4HC is not set
 CONFIG_CRYPTO_ZSTD=y
 
 #
 # Random Number Generation
 #
-# CONFIG_CRYPTO_ANSI_CPRNG is not set
+CONFIG_CRYPTO_ANSI_CPRNG=m
 CONFIG_CRYPTO_DRBG_MENU=y
 CONFIG_CRYPTO_DRBG_HMAC=y
 # CONFIG_CRYPTO_DRBG_HASH is not set
@@ -4830,6 +4832,7 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=m
 CONFIG_LZO_DECOMPRESS=m
+CONFIG_LZ4_COMPRESS=m
 CONFIG_LZ4_DECOMPRESS=m
 CONFIG_ZSTD_COMPRESS=y
 CONFIG_ZSTD_DECOMPRESS=y
@@ -4904,6 +4907,7 @@ CONFIG_OBJAGG=m
 # CONFIG_STRING_SELFTEST is not set
 # end of Library routines
 
+CONFIG_PLDMFW=y
 CONFIG_ASN1_ENCODER=m
 
 #
