--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.13.3 Kernel Configuration
+# Linux/x86 5.13.4 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Clear Linux OS for Intel Architecture) 11.1.1 20210714 releases/gcc-11.1.0-444-g5bde7650ca"
 CONFIG_CC_IS_GCC=y
@@ -2813,6 +2813,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
 # CONFIG_BATTERY_GOLDFISH is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_BD99954 is not set
 CONFIG_HWMON=m
 # CONFIG_HWMON_DEBUG_CHIP is not set
